<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:iconTint="@color/normalColor1"
            android:title="@string/home"
            android:icon="@drawable/home"/>
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/contact"
            android:iconTint="@color/normalColor1"
            android:title="@string/contact"
            android:icon="@drawable/contact"/>
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/about"
            android:iconTint="@color/normalColor1"
            android:title="@string/about"
            android:icon="@drawable/about"/>
    </group>
    <group android:checkableBehavior="single">
        <item
            android:title="@string/service">
            <menu>
                <item
                    android:id="@+id/webDevelopment"
                    android:iconTint="@color/normalColor1"
                    android:title="@string/web_development"
                    android:icon="@drawable/contact"/>
                <item
                    android:id="@+id/app_gameDevelopment"
                    android:iconTint="@color/normalColor1"
                    android:title="@string/app_game_development"
                    android:icon="@drawable/contact"/>
                <item
                    android:id="@+id/softwarDevelopment"
                    android:iconTint="@color/normalColor1"
                    android:title="@string/software_development"
                    android:icon="@drawable/contact"/>
                <item
                    android:id="@+id/digitalmarketing"
                    android:iconTint="@color/normalColor1"
                    android:title="@string/digital_marketing"
                    android:icon="@drawable/contact"/>
                <item
                    android:id="@+id/hardware_solution"
                    android:iconTint="@color/normalColor1"
                    android:title="@string/hardware_solution"
                    android:icon="@drawable/contact"/>
                <item
                    android:id="@+id/security"
                    android:iconTint="@color/normalColor1"
                    android:title="@string/security"
                    android:icon="@drawable/contact"/>
                <item
                    android:id="@+id/training"
                    android:iconTint="@color/normalColor1"
                    android:title="@string/training"
                    android:icon="@drawable/contact"/>
            </menu>
        </item>
        <item
            android:icon="@color/normalColor1"
            android:iconTint="@color/normalColor1"
            android:title="@string/product">
            <menu>
                <item
                    android:id="@+id/seo"
                    android:iconTint="@color/normalColor1"
                    android:title="@string/packages_seo"
                    android:icon="@drawable/contact"/>
                <item
                    android:id="@+id/web"
                    android:iconTint="@color/normalColor1"
                    android:title="@string/packages_web"
                    android:icon="@drawable/contact"/>
            </menu>
        </item>
        <item
            android:id="@+id/signOut"
            android:iconTint="@color/normalColor1"
            android:title="@string/signOut"
            android:icon="@drawable/ic_baseline_logout_24"/>
    </group>
</menu>