<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor1"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SoftwareDevelopmentScreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/firstConstraint"
            android:padding="30px"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:padding="5px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:id="@+id/back"
                android:src="@drawable/ic_back"
                android:focusable="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/software_development"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/normalColor1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/firstConstraint">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">
                    <ImageView
                        android:id="@+id/course_pic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:src="@drawable/product"
                        android:layout_marginTop="20px"
                        android:scaleType="centerCrop"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <TextView
                        android:id="@+id/text_1"
                        android:padding="40px"
                        android:text="@string/software_Screeen_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:textColor="@color/black"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/course_pic"/>
                    <TextView
                        android:id="@+id/text_2"
                        android:padding="40px"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:text="We have great technical expertise in all business domains.   We know how to redefine the business processes to reap the best results. "
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/text_1"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/text_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="40px"
                        android:text="@string/software_Screen_2"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_2" />

                    <TextView
                        android:id="@+id/text_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="40px"
                        android:text="As a Software Development Company, we always aim to offer you top quality software applications to our clients. By using our software tools you will be able to stay updated and ahead of your competitors. "
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_3" />

                    <TextView
                        android:id="@+id/text_5"
                        android:padding="40px"
                        android:text="@string/software_Screen_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/text_4"
                        app:layout_constraintStart_toStartOf="parent"/>
                    <TextView
                        android:id="@+id/text_6"
                        android:padding="40px"
                        android:text="@string/software_Screen_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/text_5"
                        app:layout_constraintStart_toStartOf="parent"/>
                    <TextView
                        android:id="@+id/text_7"
                        android:padding="40px"
                        android:textColor="@color/black"
                        android:text="@string/software_Screen_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/text_6"
                        app:layout_constraintStart_toStartOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
        </RelativeLayout>
</RelativeLayout>