<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor1"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HardwareSolution">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstConstraint">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30px"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:padding="5px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:id="@+id/back"
                android:src="@drawable/ic_back"
                android:focusable="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="HARDWARE SOLUTIONS"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/normalColor1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_below="@+id/firstConstraint">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/text_1"
                android:text="Networking:"
                android:paddingStart="40px"
                android:paddingEnd="40px"
                android:paddingBottom="10px"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/text_2"
                android:text="@string/hardware_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding_40px"
                android:paddingEnd="@dimen/padding_40px"
                android:paddingBottom="@dimen/padding_40px"
                app:layout_constraintTop_toBottomOf="@id/text_1"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/text_3"
                android:text="CCTV Solutions:"
                android:paddingStart="40px"
                android:paddingEnd="40px"
                android:paddingBottom="10px"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_2"/>
            <TextView
                android:id="@+id/text_4"
                android:text="@string/hardware_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding_40px"
                android:paddingEnd="@dimen/padding_40px"
                android:paddingBottom="@dimen/padding_40px"
                app:layout_constraintTop_toBottomOf="@id/text_3"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/text_5"
                android:text="Access Control Systems:"
                android:paddingStart="40px"
                android:paddingEnd="40px"
                android:paddingBottom="10px"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_4"/>
            <TextView
                android:id="@+id/text_6"
                android:text="@string/hardware_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding_40px"
                android:paddingEnd="@dimen/padding_40px"
                android:paddingBottom="@dimen/padding_40px"
                app:layout_constraintTop_toBottomOf="@id/text_5"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>